# AHME-MCP

./: .gitignore  .mcp.json  README.md  config.example.toml  pyproject.toml  requirements.txt
ahme/: __init__.py  api.py  compressor.py  config.py  daemon.py  db.py  mcp_server.py  merger.py  monitor.py  partitioner.py
tests/: test_compressor.py  test_config.py  test_daemon.py  test_db.py  test_merger.py  test_monitor.py  test_partitioner.py
